fix: add padding to asides so caught pokemon gallery doesn't overlap

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -21,7 +21,8 @@ audio::-webkit-media-controls-panel {
 
 .AuthButton {
   position: absolute;
-  right: 5px;
+  top: 10px;
+  right: 25px;
 }
 
 #pixelify-sans {
